# pyfourier

./: pyproject.toml  setup.cfg  setup.py
envs/: cupy_rocm.yaml  numba_cpu.yaml  numba_cuda.yaml  torch_cpu.yaml  torch_cuda.yaml  torch_rocm.yaml
src/pyfourier/: __init__.py  _rss.py
src/pyfourier/_dcomp/: pipemenon.py  voronoi.py
src/pyfourier/_fft/: __init__.py  _adj.py  _fft.py  _fwd.py  _plan.py
src/pyfourier/_gram/: __init__.py  _fwd.py  _gram.py  _plan.py
src/pyfourier/_nufft/: __init__.py  _adj.py  _fwd.py  _nufft.py  _plan.py
src/pyfourier/_preinterp/: __init__.py  _grog.py
src/pyfourier/_sparsefft/: __init__.py  _adj.py  _fwd.py  _plan.py  _sparsefft.py
src/pyfourier/_sparsegram/: __init__.py  _fwd.py  _plan.py  _sparsegram.py
src/pyfourier/_subroutines/: __init__.py  _apod.py  _b0.py  _fft.py  _resize.py  _traj.py
src/pyfourier/_subroutines/_bmatvec/: __init__.py  _bdot.py
src/pyfourier/_subroutines/_grid/: __init__.py  _plan.py
src/pyfourier/_subroutines/_grid/_cart2noncart/: _1D.py  _1D_subspace.py  _2D.py  _2D_subspace.py  _3D.py  _3D_subspace.py  _3Dstack.py  _3Dstack_subspace.py  __init__.py
src/pyfourier/_subroutines/_grid/_noncart2cart/: _1D.py  _1D_subspace.py  _2D.py  _2D_subspace.py  _3D.py  _3D_subspace.py  _3Dstack.py  (+2 more)
src/pyfourier/_subroutines/_mask/: __init__.py  _plan.py
src/pyfourier/_subroutines/_utils/: __init__.py  _atomic.py  _backend.py  _common.py  _config.py
src/pyfourier/_toeplitz/: _fwd.py  _plan.py  _toeplitz.py
src/pyfourier/demo/: _birdcage.py  _mask.py  _shepplogan.py  _spiral.py  _tse.py  _zmap.py
(+14 files in other folders)
